--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
+    "@types/chai": "4.3.5",
+    "@types/sinon": "10.0.15",
+    "@types/superagent": "4.1.17",
     "axios": "0.26.0",
     "jest": "26.6.0",
     "mocha": "9.2.0",
